Full COSMOS rerun to remove -99s
Dan Smith noticed that the IRAC fluxes on cosmos had -99 values for zero fluxes. I removed these to use standard nans - shoudl update dr1 def

--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "# Master list\n",
-    "SUFFIX='20180516'\n",
+    "SUFFIX='20180619'\n",
     "ml = Table.read(\n",
     "    \"../../dmu1/dmu1_ml_COSMOS/data/master_catalogue_cosmos_{}.fits\".format(SUFFIX))\n",
     "ml.meta = None"
@@ -375,7 +375,8 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "set()\n"
+      "set()\n",
+      "Column old_help_id has missing data\n"
      ]
     }
    ],
@@ -603,7 +604,15 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column old_help_id has missing data\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
