Prettify selection function notebooks

--- a/dmu24/dmu24_ELAIS-N1/2_Photo-z_Selection_Function.ipynb
+++ b/dmu24/dmu24_ELAIS-N1/2_Photo-z_Selection_Function.ipynb
@@ -4,6 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![HELP-Logo](https://avatars1.githubusercontent.com/u/7880370?s=200&v=4)\n",
+    "\n",
+    "\n",
     "# DMU 24 - ELAIS-N1: Photo-z Selection Function\n",
     "\n",
     "The goal is to create a selection function for the photometric redshifts that varies spatially across the field. We will use the depth maps for the optical masterlist to find regions of the field that have similar photometric coverage and then calculate the fraction of sources meeting a given photo-z selection within those pixels.\n",
@@ -1971,6 +1974,29 @@
    "source": [
     "pz_depth_map.write('{0}/photo-z_selection_{1}_{2}.fits'.format(OUT_DIR, FIELD, SUFFIX).lower(), format='fits', overwrite=True)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ![HELP LOGO](https://avatars1.githubusercontent.com/u/7880370?s=75&v=4)\n",
+    " \n",
+    "**Author**: [Kenneth Duncan](http://dunkenj.github.io)\n",
+    "\n",
+    "The Herschel Extragalactic Legacy Project, ([HELP](http://herschel.sussex.ac.uk/)), is a [European Commission Research Executive Agency](https://ec.europa.eu/info/departments/research-executive-agency_en)\n",
+    "funded project under the SP1-Cooperation, Collaborative project, Small or medium-scale focused research project, FP7-SPACE-2013-1 scheme, Grant Agreement\n",
+    "Number 607254.\n",
+    "\n",
+    "[Acknowledgements](http://herschel.sussex.ac.uk/acknowledgements)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
