--- a/dmu31/dmu31_Examples/dmu31_Using_Photo-z_Selection_Functions.ipynb
+++ b/dmu31/dmu31_Examples/dmu31_Using_Photo-z_Selection_Functions.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![HELP-Logo](https://avatars1.githubusercontent.com/u/7880370?s=200&v=4)\n",
+    "\n",
     "# DMU 31 - Using Photo-z Selection Functions\n"
    ]
   },
@@ -329,6 +331,21 @@
     "CB.set_label(r'Magnitude at which {0:.0f}% Complete'.format(completeness*100))\n",
     "\n",
     "Fig.savefig('pz_mag_depth_map_{0}_{1}.png'.format(photometry_band, completeness), format='png', dpi=150, bbox_inches='tight')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ![HELP LOGO](https://avatars1.githubusercontent.com/u/7880370?s=75&v=4)\n",
+    " \n",
+    "**Author**: [Kenneth Duncan](http://dunkenj.github.io)\n",
+    "\n",
+    "The Herschel Extragalactic Legacy Project, ([HELP](http://herschel.sussex.ac.uk/)), is a [European Commission Research Executive Agency](https://ec.europa.eu/info/departments/research-executive-agency_en)\n",
+    "funded project under the SP1-Cooperation, Collaborative project, Small or medium-scale focused research project, FP7-SPACE-2013-1 scheme, Grant Agreement\n",
+    "Number 607254.\n",
+    "\n",
+    "[Acknowledgements](http://herschel.sussex.ac.uk/acknowledgements)\n"
    ]
   },
   {
