updated likelihood ratio code

--- a/dmu12/radio_masterlist_liklihood_ratio_crossmatch.ipynb
+++ b/dmu12/radio_masterlist_liklihood_ratio_crossmatch.ipynb
@@ -4,11 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook that demonstrates how to crossmatch the masterlist to a radio catalogue using a liklihood ratio method\n",
+    "# Notebook that demonstrates how to crossmatch the masterlist to a radio catalogue using a likelihood ratio method\n",
     "\n",
-    "#### the liklihood ratio method used for this is done using the method outlined in Fleuren et al 2012\n",
+    "#### the likelihood ratio method used for this is done using the method outlined in Fleuren et al 2012\n",
     "\n",
-    "This code is adapted from code from https://github.com/nudomarinero/mltier1 which was developed for crossmatching LOFAR sources to WISE and PanStarrs which is described in Williams et al 2018. The version used for Williams et al 2018 uses a more sophisticated version that uses the color of the sources as well as their magnitudes. This code uses the magnitude only portion of the code as this is sufficent for our purposes."
+    "This code is adapted from code from https://github.com/nudomarinero/mltier1 which was developed for crossmatching LOFAR sources to WISE and PanStarrs which is described in Williams et al 2018. The version used for Williams et al 2018 uses a more sophisticated version that uses the color of the sources as well as their magnitudes. This code uses the magnitude only portion of the code as this is sufficent for our purposes.\n",
+    "\n",
+    "---------------------------\n",
+    "\n"
    ]
   },
   {
@@ -225,7 +228,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#select the maximum value of Q0 and the corresponding radius to use for the liklihood ratio crossmatch \n",
@@ -309,7 +314,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "coords_masterlist = SkyCoord(masterlist['ra'], \n",
@@ -352,7 +359,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bin_list_i = np.arange(12., 28., 0.5) # Bins of 0.5\n",
@@ -429,7 +438,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Q0 = Q0\n",
