rename and move dmu17 PSF folders

--- a/dmu17/dmu17_HELP_Legacy_Maps/Bootes/normalize_MIPS_psf.ipynb
+++ b/dmu17/dmu17_HELP_Legacy_Maps/Bootes/normalize_MIPS_psf.ipynb
@@ -125,7 +125,7 @@
    "source": [
     "insthd = fits.open('../../dmu26/data/ELAIS_N1/MIPS/PSF_Original_MIPS_24.fits.gz')\n",
     "psf_inst_full = insthd[0].data\n",
-    "hdinst = insthd[0].header\n"
+    "hdinst = insthd[0].header"
    ]
   },
   {
@@ -185,7 +185,7 @@
     }
    ],
    "source": [
-    "hdinst\n"
+    "hdinst"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "source": [
     "# find the brightest pixel, it will be our center.\n",
     "jmax, imax = np.unravel_index(np.argmax(psf), psf.shape)\n",
-    "jmax_inst, imax_inst = np.unravel_index(np.argmax(psf_inst), psf_inst.shape)\n"
+    "jmax_inst, imax_inst = np.unravel_index(np.argmax(psf_inst), psf_inst.shape)"
    ]
   },
   {
@@ -521,7 +521,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -616,7 +618,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -720,8 +724,7 @@
     "    imin = np.argmin(resid)\n",
     "    rmin, fmin = np.unravel_index(imin, resid.shape)\n",
     "    print(\"rf = {:.3f}, ff = {:.3f}, residual = {:.3f}\".format(rfactor[rmin], ffactor[fmin], resid[rmin, fmin]))\n",
-    "    print(np.max((psf/np.max(encircled_flux)/ffactor[fmin])))\n",
-    "    "
+    "    print(np.max((psf/np.max(encircled_flux)/ffactor[fmin])))"
    ]
   },
   {
@@ -955,7 +958,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -967,7 +972,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -978,5 +983,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
