Peters dmu17 documentation update

--- a/dmu17/dmu17_HELP_Legacy_Maps/ELAIS-N1/normalize_MIPS_psf.ipynb
+++ b/dmu17/dmu17_HELP_Legacy_Maps/ELAIS-N1/normalize_MIPS_psf.ipynb
@@ -499,7 +499,7 @@
    "source": [
     "plt.plot(radii[1:], growth_psfcor[1:]/growth_psf[1:])\n",
     "plt.xlabel('Radius [arcsec]')\n",
-    "plt.ylabel('Ratio of encircled flux')\n"
+    "plt.ylabel('Ratio of encircled flux')"
    ]
   },
   {
@@ -686,8 +686,7 @@
     "\n",
     "print(p)\n",
     "print((max_dpsfcor[1]-max_dpsfcor[0])/(max_dpsf[1]-max_dpsf[0]))\n",
-    "print((max_dpsfcor[2]-max_dpsfcor[0])/(max_dpsf[2]-max_dpsf[0]))\n",
-    "\n"
+    "print((max_dpsfcor[2]-max_dpsfcor[0])/(max_dpsf[2]-max_dpsf[0]))"
    ]
   },
   {
@@ -730,8 +729,7 @@
     "plt.plot(radii*beta, interp_growth_psfcor)\n",
     "plt.xlim([0,60])\n",
     "plt.xlabel('radius [arcsec]')\n",
-    "plt.ylabel('Encircled flux')\n",
-    "\n"
+    "plt.ylabel('Encircled flux')"
    ]
   },
   {
@@ -835,9 +833,7 @@
     "idj, idi = np.where(r<max_dpsfcor_2)\n",
     "print('central core for observation: {}'.format(np.sum(psf_obs_norm[idj, idi])*resol**2))\n",
     "idj, idi = np.where(r<max_dpsf_2)\n",
-    "print('central core for theoretical: {}'.format(np.sum(psf[idj, idi])*resol**2))\n",
-    "\n",
-    "\n"
+    "print('central core for theoretical: {}'.format(np.sum(psf[idj, idi])*resol**2))"
    ]
   },
   {
@@ -987,7 +983,7 @@
    "source": [
     "insthd = fits.open('/Users/pdh21/Google Drive/WORK/ELAIS_N1/MIPS/PSF_Original_MIPS_24.fits.gz')\n",
     "psf_inst_full = insthd[0].data\n",
-    "hdinst = insthd[0].header\n"
+    "hdinst = insthd[0].header"
    ]
   },
   {
@@ -1047,7 +1043,7 @@
     }
    ],
    "source": [
-    "hdinst\n"
+    "hdinst"
    ]
   },
   {
@@ -1106,7 +1102,7 @@
    "source": [
     "# find the brightest pixel, it will be our center.\n",
     "jmax, imax = np.unravel_index(np.argmax(psf), psf.shape)\n",
-    "jmax_inst, imax_inst = np.unravel_index(np.argmax(psf_inst), psf_inst.shape)\n"
+    "jmax_inst, imax_inst = np.unravel_index(np.argmax(psf_inst), psf_inst.shape)"
    ]
   },
   {
@@ -1514,7 +1510,6 @@
     }
    ],
    "source": [
-    "\n",
     "radii_inst = np.unique(r_inst)\n",
     "encircled_flux_inst = np.zeros(radii_inst.shape)\n",
     "nbpix_inst = np.zeros(radii_inst.shape)\n",
@@ -1523,8 +1518,7 @@
     "        print(i,len(radii_inst))\n",
     "    idj, idi = np.where(r_inst <= radius)\n",
     "    nbpix_inst[i] =len(idi)\n",
-    "    encircled_flux_inst[i] = np.sum(psf_inst[idj, idi])\n",
-    "    "
+    "    encircled_flux_inst[i] = np.sum(psf_inst[idj, idi])"
    ]
   },
   {
@@ -1700,7 +1694,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2868,7 +2864,7 @@
     "    print(i, rf,np.isnan(yfit).sum())\n",
     "\n",
     "    for j, ff in enumerate(ffactor):\n",
-    "        resid[i, j] = np.sum((yv-yfit*ff)**2)\n"
+    "        resid[i, j] = np.sum((yv-yfit*ff)**2)"
    ]
   },
   {
@@ -3100,7 +3096,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -3112,7 +3110,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -3123,5 +3121,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
