Docs on dmu31 examples - typos

--- a/dmu31/dmu31_Examples/dmu31_Using_Photo-z_Selection_Functions.ipynb
+++ b/dmu31/dmu31_Examples/dmu31_Using_Photo-z_Selection_Functions.ipynb
@@ -13,9 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook illustrates some example uses of the photometric selection functions produced in the [this selection function notebook](https://github.com/H-E-L-P/dmu_products/blob/master/dmu24/dmu24_ELAIS-N1/2_Photo-z_Selection_Function.ipynb). \n",
-    "\n",
-    "The goal is to create a selection function for the photometric redshifts that accounts for the varying redshift quality due to the inhomogeneous data coverage. The method outlined in the above notebook implicitly accounts for these effects due to the clustering of regions with similar optical depth properties.\n",
+    "This notebook illustrates some example uses of the photometric selection functions produced in [this selection function notebook](https://github.com/H-E-L-P/dmu_products/blob/master/dmu24/dmu24_ELAIS-N1/2_Photo-z_Selection_Function.ipynb). The goal is to create a selection function for the photometric redshifts that accounts for the varying redshift quality due to the inhomogeneous data coverage. The method outlined in the above notebook implicitly accounts for these effects due to the clustering of regions with similar optical depth properties.\n",
     "\n",
     "Here we use the example field, ELAIS-N1 as an illustration."
    ]
