Make hashing optional because it is slow

--- a/meta/make_meta.ipynb
+++ b/meta/make_meta.ipynb
@@ -55,7 +55,8 @@
    },
    "outputs": [],
    "source": [
-    "SUFFIX = os.environ.get('SUFFIX', time.strftime(\"_%Y%m%d\"))"
+    "SUFFIX = os.environ.get('SUFFIX', time.strftime(\"_%Y%m%d\"))\n",
+    "MAKE_HASHES = False"
    ]
   },
   {
@@ -690,19 +691,10 @@
    },
    "outputs": [],
    "source": [
-    "hashes = [(fname, hash_bytestr_iter(file_as_blockiter(open(fname, 'rb')), hashlib.sha256()))\n",
-    "    for fname in file_overview['data_filenames']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "file_overview.add_column(Column(data=[i[1] for i in hashes], name='hashes'))\n"
+    "if MAKE_HASHES:\n",
+    "    hashes = [(fname, hash_bytestr_iter(file_as_blockiter(open(fname, 'rb')), hashlib.sha256()))\n",
+    "        for fname in file_overview['data_filenames']]\n",
+    "    file_overview.add_column(Column(data=[i[1] for i in hashes], name='hashes'))"
    ]
   },
   {
@@ -808,6 +800,198 @@
     "file_overview.write('file_overview{}.fits'.format(SUFFIX), overwrite=True)\n",
     "file_overview.write('file_overview{}.csv'.format(SUFFIX), overwrite=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "yml_files = glob.glob('../**/*.yml', recursive=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../dmu2/meta_main.yml',\n",
+       " '../dmu5/dmu5_gaia_flagging_script/meta_main.yml',\n",
+       " '../meta/meta_main.yml',\n",
+       " '../dmu14/dmu14_GALEX-GCAT/meta_survey.yml',\n",
+       " '../dmu14/dmu14_GALEX-GCAT/meta_main.yml',\n",
+       " '../dmu13/dmu13-jvla-cosmos-3-ghz-cat-ids-smolcic-2017/meta_main.yml',\n",
+       " '../dmu13/dmu13-lockman-hole-project-1.4-ghz-cat-ids/meta_main.yml',\n",
+       " '../dmu22/meta_main.yml',\n",
+       " '../dmu24/dmu24_filters/meta_main.yml',\n",
+       " '../dmu12/dmu12-lofar-bootes-150-mhz-cat-ids-2017/meta_survey.yml',\n",
+       " '../dmu12/dmu12-lofar-bootes-150-mhz-cat-ids-2017/meta_main.yml',\n",
+       " '../dmu32/columns.yml',\n",
+       " '../dmu32/dmu32_COSMOS/meta_main.yml',\n",
+       " '../dmu32/dmu32_ELAIS-S1/meta_main.yml',\n",
+       " '../dmu32/dmu32_GAMA-09/meta_main.yml',\n",
+       " '../dmu32/dmu32_Lockman-SWIRE/meta_main.yml',\n",
+       " '../dmu32/dmu32_ELAIS-N2/meta_main.yml',\n",
+       " '../dmu32/dmu32_Herschel-Stripe-82/meta_main.yml',\n",
+       " '../dmu32/dmu32_SA13/meta_main.yml',\n",
+       " '../dmu32/dmu32_GAMA-12/meta_main.yml',\n",
+       " '../dmu32/dmu32_GAMA-15/meta_main.yml',\n",
+       " '../dmu32/dmu32_AKARI-SEP/meta_main.yml',\n",
+       " '../dmu32/dmu32_SGP/meta_main.yml',\n",
+       " '../dmu32/dmu32_xFLS/meta_main.yml',\n",
+       " '../dmu32/dmu32_CDFS-SWIRE/meta_main.yml',\n",
+       " '../dmu32/dmu32_SSDF/meta_main.yml',\n",
+       " '../dmu32/dmu32_XMM-LSS/meta_main.yml',\n",
+       " '../dmu32/dmu32_SPIRE-NEP/meta_main.yml',\n",
+       " '../dmu32/dmu32_AKARI-NEP/meta_main.yml',\n",
+       " '../dmu32/dmu32_ELAIS-N1/meta_main.yml',\n",
+       " '../dmu32/dmu32_NGP/meta_main.yml',\n",
+       " '../dmu32/dmu32_XMM-13hr/meta_main.yml',\n",
+       " '../dmu32/dmu32_Bootes/meta_main.yml',\n",
+       " '../dmu32/dmu32_HDF-N/meta_main.yml',\n",
+       " '../dmu32/dmu32_EGS/meta_main.yml',\n",
+       " '../dmu0/dmu0_CFHTLS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_SpARCS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_RCSLenS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_DEEP2/meta_survey.yml',\n",
+       " '../dmu0/dmu0_CANDELS-UDS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_CANDELS-3D-HST/meta_survey.yml',\n",
+       " '../dmu0/dmu0_VISTA-VIDEO-private/meta_survey.yml',\n",
+       " '../dmu0/dmu0_NDWFS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_SpUDS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_CANDELS-GOODS-S/meta_survey.yml',\n",
+       " '../dmu0/dmu0_SSDF/meta_survey.yml',\n",
+       " '../dmu0/dmu0_Fireworks/meta_survey.yml',\n",
+       " '../dmu0/dmu0_DataFusion-Spitzer/meta_survey.yml',\n",
+       " '../dmu0/dmu0_CANDELS-GOODS-N/meta_survey.yml',\n",
+       " '../dmu0/dmu0_CFHTLenS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_INTWFC/meta_survey.yml',\n",
+       " '../dmu0/dmu0_zBootes/meta_survey.yml',\n",
+       " '../dmu0/dmu0_IRAC-EGS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_LegacySurvey/meta_survey.yml',\n",
+       " '../dmu0/dmu0_2MASS-point-sources/meta_survey.yml',\n",
+       " '../dmu0/dmu0_Ultradeep-Ks-GOODS-N/meta_survey.yml',\n",
+       " '../dmu0/dmu0_PanSTARRS1-3SS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_VIPERS-MLS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_VISTA-VIKING/meta_survey.yml',\n",
+       " '../dmu0/dmu0_CFHT-WIRDS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_SHELA/meta_survey.yml',\n",
+       " '../dmu0/dmu0_SDSS-S82/meta_survey.yml',\n",
+       " '../dmu0/dmu0_ATLAS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_UKIDSS-DXS_DR10plus/meta_survey.yml',\n",
+       " '../dmu0/dmu0_DECaLS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_Hawaii-HDFN/meta_survey.yml',\n",
+       " '../dmu0/dmu0_AKARI-NEP-OptNIR/meta_survey.yml',\n",
+       " '../dmu0/dmu0_KIDS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_NEP-Spitzer/meta_survey.yml',\n",
+       " '../dmu0/dmu0_ESIS-VOICE/meta_survey.yml',\n",
+       " '../dmu0/dmu0_ESIS-VOICE/meta_survey_2.yml',\n",
+       " '../dmu0/dmu0_COSMOS2015/meta_survey.yml',\n",
+       " '../dmu0/dmu0_SPLASH-SXDF/meta_survey.yml',\n",
+       " '../dmu0/dmu0_CANDELS-EGS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_HSC/meta_survey.yml',\n",
+       " '../dmu0/dmu0_UKIDSS-UDS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_VISTA-VHS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_2MASS-extended-sources/meta_survey.yml',\n",
+       " '../dmu0/dmu0_SIMES/meta_survey.yml',\n",
+       " '../dmu0/dmu0_SDSS-DR13/meta_survey.yml',\n",
+       " '../dmu0/dmu0_GOODS-ACS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_COMBO-17/meta_survey.yml',\n",
+       " '../dmu0/dmu0_SDWFS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_UKIDSS-LAS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_KPNO-FLS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_AEGIS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_VICS82/meta_survey.yml',\n",
+       " '../dmu0/dmu0_UHS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_SpIES/meta_survey.yml',\n",
+       " '../dmu0/dmu0_IBIS/meta_survey.yml',\n",
+       " '../dmu0/dmu0_DES/meta_survey.yml',\n",
+       " '../dmu0/dmu0_IAC_Stripe82_Legacy_Project/meta_survey.yml',\n",
+       " '../dmu0/dmu0_SXDS/meta_survey.yml',\n",
+       " '../dmu1/dmu1_ml_AKARI-NEP/meta_main.yml',\n",
+       " '../dmu8/dmu8_lofar_LockmanHole_cat/meta_survey.yml',\n",
+       " '../dmu8/dmu8_lofar_LockmanHole_cat/meta_main.yml',\n",
+       " '../dmu8/dmu8_lofar_HATLAS_cat/meta_survey.yml',\n",
+       " '../dmu8/dmu8_lofar_HATLAS_cat/meta_main.yml',\n",
+       " '../dmu8/dmu8_TGSS_allsky_cat/meta_survey.yml',\n",
+       " '../dmu8/dmu8_TGSS_allsky_cat/meta_main.yml',\n",
+       " '../TEMPLATES/meta_external_data.yml',\n",
+       " '../TEMPLATES/meta_survey.yml',\n",
+       " '../TEMPLATES/meta_main.yml',\n",
+       " '../dmu17/dmu17_HELP_Legacy_Maps/XMM-LSS/SPUDS/meta_main.yml',\n",
+       " '../dmu17/dmu17_HELP_Legacy_Maps/XMM-LSS/SWIRE/meta_main.yml',\n",
+       " '../dmu17/dmu17_HELP_Legacy_Maps/ELAIS-N1/meta_main.yml',\n",
+       " '../dmu17/dmu17_HELP_Legacy_Maps/Bootes/meta_main.yml',\n",
+       " '../dmu17/dmu17_HELP_Legacy_Maps/xFLS/meta_main.yml',\n",
+       " '../dmu17/dmu17_HELP_Legacy_Maps/CDFS-SWIRE/meta_main.yml',\n",
+       " '../dmu17/dmu17_HELP_Legacy_Maps/Lockman-SWIRE/meta_main.yml',\n",
+       " '../dmu17/dmu17_HELP_Legacy_Maps/ELAIS-S1/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+MIPS_ELAIS-N1/meta_survey_2.yml',\n",
+       " '../dmu26/dmu26_XID+MIPS_ELAIS-N1/meta_survey_1.yml',\n",
+       " '../dmu26/dmu26_XID+MIPS_ELAIS-N1/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+PACS_COSMOS/meta_survey.yml',\n",
+       " '../dmu26/dmu26_XID+PACS_COSMOS/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+SPIRE_ELAIS-S1/meta_survey.yml',\n",
+       " '../dmu26/dmu26_XID+SPIRE_ELAIS-S1/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/meta_survey.yml',\n",
+       " '../dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+PACS_ELAIS-S1/meta_survey.yml',\n",
+       " '../dmu26/dmu26_XID+PACS_ELAIS-S1/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+PACS_Lockman-SWIRE/meta_survey.yml',\n",
+       " '../dmu26/dmu26_XID+PACS_Lockman-SWIRE/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+MIPS_ELAIS-S1/meta_survey.yml',\n",
+       " '../dmu26/dmu26_XID+MIPS_ELAIS-S1/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+MIPS_CDFS-SWIRE/meta_survey.yml',\n",
+       " '../dmu26/dmu26_XID+MIPS_CDFS-SWIRE/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+SPIRE_COSMOS/meta_survey.yml',\n",
+       " '../dmu26/dmu26_XID+SPIRE_COSMOS/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+SPIRE_Lockman-SWIRE/meta_survey.yml',\n",
+       " '../dmu26/dmu26_XID+SPIRE_Lockman-SWIRE/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+SPIRE_GAMA-15/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+PACS_CDFS-SWIRE/meta_survey.yml',\n",
+       " '../dmu26/dmu26_XID+PACS_CDFS-SWIRE/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+SPIRE_GAMA-12/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+PACS_ELAIS-N1/meta_survey_2.yml',\n",
+       " '../dmu26/dmu26_XID+PACS_ELAIS-N1/meta_survey_1.yml',\n",
+       " '../dmu26/dmu26_XID+PACS_ELAIS-N1/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+SPIRE_GAMA-09/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+MIPS_COSMOS/meta_survey.yml',\n",
+       " '../dmu26/dmu26_XID+MIPS_COSMOS/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+MIPS_Lockman-SWIRE/meta_survey.yml',\n",
+       " '../dmu26/dmu26_XID+MIPS_Lockman-SWIRE/meta_main.yml',\n",
+       " '../dmu26/dmu26_XID+SPIRE_ELAIS-N1/meta_survey_2.yml',\n",
+       " '../dmu26/dmu26_XID+SPIRE_ELAIS-N1/meta_survey_1.yml',\n",
+       " '../dmu26/dmu26_XID+SPIRE_ELAIS-N1/meta_main.yml',\n",
+       " '../dmu18/dmu18_CDFS-SWIRE/meta_main.yml',\n",
+       " '../dmu18/dmu18_ELAIS-N1/meta_main.yml',\n",
+       " '../dmu16/dmu16_allwise/meta_survey.yml',\n",
+       " '../dmu16/dmu16_allwise/meta_main.yml']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yml_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
