--- a/dmu22/dmu22_SA13/XID+BLIND_SA13_final_processing.ipynb
+++ b/dmu22/dmu22_SA13/XID+BLIND_SA13_final_processing.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Final Processing\n",
+    "# Final Processing of SA13 Blind source catalogue\n",
+    "\n",
+    "![HELP LOGO](https://avatars1.githubusercontent.com/u/7880370?s=100&v=4>)\n",
+    "\n",
+    "\n",
     "The final processing stage requires:\n",
     "1. Quick validation of blind catalogues and Bayesian Pvalue maps\n",
     "2. Skewness level\n",
@@ -15,7 +19,9 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
@@ -42,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cat=Table.read('./data/dmu22_XID+SPIRE_SA13_BLIND.fits')\n",
@@ -236,7 +244,9 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cat.add_column(Column(np.zeros(len(cat), dtype=bool),name='flag_spire_250'))\n",
@@ -247,7 +257,9 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ind_250=(cat['Pval_res_250']>0.5) | (cat['F_SPIRE_250'] < 6)\n",
@@ -275,7 +287,9 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cat['flag_spire_250'][ind_250]=True\n",
@@ -286,7 +300,9 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# set XID+ cahtalogue back to orignal order of objects, as used in MF detection files\n",
@@ -298,7 +314,9 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Reads MF table, removes duplicate RA and DEC\n",
@@ -311,7 +329,9 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Created HELP_ID, and changes HELP to HELP_BLIND to avoid confusion with HELP-Masterlist objects\n",
@@ -324,10 +344,12 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# all flux denisties are in mJy in the final BLIND cahtalogues\n",
+    "# all flux denisties are in mJy in the final BLIND catalogues\n",
     "cat_all['F_BLIND_MF_SPIRE_250'].unit = 'mJy'\n",
     "cat_all['F_BLIND_MF_SPIRE_250'] = 1000*cat_all['F_BLIND_MF_SPIRE_250']\n",
     "cat_all['FErr_BLIND_MF_SPIRE_250'].unit = 'mJy'\n",
@@ -379,7 +401,9 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Add field name\n",
@@ -406,21 +430,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -441,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
