All depth maps removing low signal to noise objects
Since not all catalogues are 5 sigma selected the depths may be dominated by objects which do not reflect the rms of the map so we mask out objects with signal to noise less than 5

--- a/dmu1/dmu1_ml_AKARI-NEP/4_Selection_function.ipynb
+++ b/dmu1/dmu1_ml_AKARI-NEP/4_Selection_function.ipynb
@@ -141,7 +141,7 @@
     "# photometry and so the errors will not refelct the RMS of the map \n",
     "for n,col in enumerate(master_catalogue.colnames):\n",
     "    if col.startswith(\"f_\"):\n",
-    "        err_col = col.replace('f_')\n",
+    "        err_col = \"ferr{}\".format(col[1:])\n",
     "        errs = master_catalogue[err_col]\n",
     "        fluxes = master_catalogue[col]\n",
     "        mask = fluxes/errs < 5.0\n",
