--- a/dmu1/dmu1_ml_Herschel-Stripe-82/4_Selection_function.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/4_Selection_function.ipynb
@@ -519,7 +519,7 @@
    },
    "outputs": [],
    "source": [
-    "depths.write(\"{}/depths_{}_{}.fits\".format(OUT_DIR, FIELD.lower(), SUFFIX))"
+    "depths.write(\"{}/depths_{}_{}.fits\".format(OUT_DIR, FIELD.lower(), SUFFIX), overwrite=True)"
    ]
   },
   {
