--- a/dmu1/dmu1_ml_NGP/4_Selection_function.ipynb
+++ b/dmu1/dmu1_ml_NGP/4_Selection_function.ipynb
@@ -520,7 +520,7 @@
    },
    "outputs": [],
    "source": [
-    "depths.write(\"{}/depths_{}_{}.fits\".format(OUT_DIR, FIELD.lower(), SUFFIX))"
+    "depths.write(\"{}/depths_{}_{}.fits\".format(OUT_DIR, FIELD.lower(), SUFFIX), overwrite=True)"
    ]
   },
   {
