Add SPIRE and make CIGALE input on SGP

--- a/dmu28/dmu28_SGP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_SGP/CIGALE_catalogue_preparation.ipynb
@@ -68,12 +68,12 @@
    },
    "outputs": [],
    "source": [
-    "# good = {}\n",
-    "# for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
-    "#     good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "#                                    ~master_catalogue['flag_{}'.format(band)])\n",
-    "#     good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
-    "#                               master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
+    "#good = {}\n",
+    "#for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
+    "#    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
+    "#                                   ~master_catalogue['flag_{}'.format(band)])\n",
+    "#    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "#                              master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
    ]
   },
   {
@@ -6183,10 +6183,21 @@
     "        \n",
     "    file_num = tile.split('_')[4].split('.')[0]\n",
     "    best_catalogue = Table.read(tile)\n",
+    "    \n",
     "    optnir = ((best_catalogue['flag_optnir_det'] == 3) \n",
     "          | (best_catalogue['flag_optnir_det'] == 7))\n",
     "    \n",
-    "    best_catalogue = best_catalogue[optnir]\n",
+    "    good = {}\n",
+    "    for band in [ 'spire_250', 'spire_350', 'spire_500']:\n",
+    "        good[band] = (~np.isnan(best_catalogue['f_{}'.format(band)]) & \n",
+    "                                       ~best_catalogue['flag_{}'.format(band)])\n",
+    "        good[band][good[band]] &= (best_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "                                  best_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)\n",
+    "    \n",
+    "    combined_good = np.sum(list(good.values()), axis=0) >= 2\n",
+    "    \n",
+    "    best_catalogue = best_catalogue[combined_good]\n",
+    "    #best_catalogue = best_catalogue[optnir]\n",
     "\n",
     "\n",
     "    best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]\n",
@@ -6209,8 +6220,8 @@
     "    remove_unneeded_fluxes(z_bands)\n",
     "    remove_unneeded_fluxes(y_bands)\n",
     "\n",
-    "\n",
-    "    best_catalogue.write(\"data_tmp/tiles/SGP_cigale_optnir_extcor_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)\n",
+    "    #best_catalogue.write(\"data_tmp/tiles/SGP_cigale_optnir_extcor_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)\n",
+    "    best_catalogue.write(\"data_tmp/tiles/SGP_cigale_best_extcor_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)\n",
     "    \n",
     "print(\"Number of zphot optnir objects: {}\".format(n_zphot))"
    ]
