--- a/dmu32/dmu32_SGP/SGP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_SGP/SGP_catalogue_merging.ipynb
@@ -228,6 +228,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def help_merge(table1, table2):\n",
+    "    merged_table = join(table1, table2, join_type='left')\n",
+    "    for col in merged_table.colnames:\n",
+    "        if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "            merged_table[col].fill_value = np.nan\n",
+    "        elif col.startswith(\"flag_\"):\n",
+    "            merged_table[col].fill_value = False\n",
+    "        elif col == 'redshift':\n",
+    "            merged_table[col].fill_value = np.nan\n",
+    "    return merged_table.filled()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "collapsed": true
