--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -18,7 +18,16 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/seaborn/apionly.py:6: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from astropy.table import Table, Column\n",
     "from astropy import units as u\n",
@@ -61,31 +70,31 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table139909371936384-314606\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140000904617320-525715\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th></tr></thead>\n",
-       "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.0</td><td>348848640</td><td>348.85 MB</td></tr>\n",
-       "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>9.0</td><td>538606080</td><td>538.61 MB</td></tr>\n",
-       "<tr><td>2</td><td>Bootes</td><td>20180307</td><td>20180307</td><td>3367490</td><td>11.0</td><td>4310429760</td><td>4.31 GB</td></tr>\n",
-       "<tr><td>3</td><td>CDFS-SWIRE</td><td>20180221</td><td>20180221</td><td>2171051</td><td>13.0</td><td>5705593920</td><td>5.71 GB</td></tr>\n",
-       "<tr><td>4</td><td>COSMOS</td><td>20180313</td><td>20180313</td><td>2599374</td><td>5.0</td><td>10446992640</td><td>10.45 GB</td></tr>\n",
-       "<tr><td>5</td><td>EGS</td><td>20180217</td><td>20180217</td><td>1412613</td><td>4.0</td><td>3778816320</td><td>3.78 GB</td></tr>\n",
-       "<tr><td>6</td><td>ELAIS-N1</td><td>20171016</td><td>20180216</td><td>4026292</td><td>14.0</td><td>5242279680</td><td>5.24 GB</td></tr>\n",
-       "<tr><td>7</td><td>ELAIS-N2</td><td>20180218</td><td>20180218</td><td>1783240</td><td>9.0</td><td>2007964800</td><td>2.01 GB</td></tr>\n",
-       "<tr><td>8</td><td>ELAIS-S1</td><td>20180221</td><td>20180221</td><td>1655564</td><td>9.0</td><td>1970156160</td><td>1.97 GB</td></tr>\n",
-       "<tr><td>9</td><td>GAMA-09</td><td>20171206</td><td>20171206</td><td>12937982</td><td>62.0</td><td>19652852160</td><td>19.65 GB</td></tr>\n",
-       "<tr><td>10</td><td>GAMA-12</td><td>20180218</td><td>20180218</td><td>12369415</td><td>63.0</td><td>14633066880</td><td>14.63 GB</td></tr>\n",
-       "<tr><td>11</td><td>GAMA-15</td><td>20180213</td><td>20180213</td><td>14232880</td><td>62.0</td><td>16595585280</td><td>16.6 GB</td></tr>\n",
-       "<tr><td>12</td><td>HDF-N</td><td>20180219</td><td>20180219</td><td>130679</td><td>1.0</td><td>183251520</td><td>183.25 MB</td></tr>\n",
-       "<tr><td>13</td><td>Herschel-Stripe-82</td><td>20180307</td><td>20180307</td><td>50196455</td><td>363.0</td><td>127047306240</td><td>127.05 GB</td></tr>\n",
-       "<tr><td>14</td><td>Lockman-SWIRE</td><td>20180219</td><td>20180219</td><td>4366298</td><td>22.0</td><td>5195931840</td><td>5.2 GB</td></tr>\n",
-       "<tr><td>15</td><td>NGP</td><td>20180219</td><td>20180219</td><td>6759591</td><td>178.0</td><td>4954806720</td><td>4.95 GB</td></tr>\n",
-       "<tr><td>16</td><td>SA13</td><td>20180219</td><td>20180219</td><td>9799</td><td>0.0</td><td>2721600</td><td>2.72 MB</td></tr>\n",
-       "<tr><td>17</td><td>SGP</td><td>20180221</td><td>20180221</td><td>29790690</td><td>295.0</td><td>45192530880</td><td>45.19 GB</td></tr>\n",
-       "<tr><td>18</td><td>SPIRE-NEP</td><td>20180220</td><td>20180220</td><td>2674</td><td>0.0</td><td>1203840</td><td>1.2 MB</td></tr>\n",
-       "<tr><td>19</td><td>SSDF</td><td>20180221</td><td>20180221</td><td>12661903</td><td>111.0</td><td>8078319360</td><td>8.08 GB</td></tr>\n",
-       "<tr><td>20</td><td>xFLS</td><td>20180221</td><td>20180221</td><td>977148</td><td>7.0</td><td>1050474240</td><td>1.05 GB</td></tr>\n",
-       "<tr><td>21</td><td>XMM-13hr</td><td>20180221</td><td>20180221</td><td>38629</td><td>1.0</td><td>10676160</td><td>10.68 MB</td></tr>\n",
-       "<tr><td>22</td><td>XMM-LSS</td><td>20180221</td><td>20180221</td><td>8704751</td><td>22.0</td><td>28238313600</td><td>28.24 GB</td></tr>\n",
+       "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td></tr>\n",
+       "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>8.713306475131118</td><td>538606080</td><td>538.61 MB</td></tr>\n",
+       "<tr><td>2</td><td>Bootes</td><td>20180520</td><td>20180520</td><td>3481661</td><td>11.42815299095486</td><td>5002044480</td><td>5 GB</td></tr>\n",
+       "<tr><td>3</td><td>CDFS-SWIRE</td><td>20180613</td><td>20180613</td><td>2171051</td><td>12.971246403717068</td><td>5705593920</td><td>5.71 GB</td></tr>\n",
+       "<tr><td>4</td><td>COSMOS</td><td>20180619</td><td>20180619</td><td>2599374</td><td>5.083863478496816</td><td>10517175360</td><td>10.52 GB</td></tr>\n",
+       "<tr><td>5</td><td>EGS</td><td>20180501</td><td>20180501</td><td>1412613</td><td>3.566383275122158</td><td>3808480320</td><td>3.81 GB</td></tr>\n",
+       "<tr><td>6</td><td>ELAIS-N1</td><td>20171016</td><td>20180216</td><td>4026292</td><td>13.507484555454763</td><td>5242279680</td><td>5.24 GB</td></tr>\n",
+       "<tr><td>7</td><td>ELAIS-N2</td><td>20180218</td><td>20180218</td><td>1783240</td><td>9.167479903991113</td><td>2007964800</td><td>2.01 GB</td></tr>\n",
+       "<tr><td>8</td><td>ELAIS-S1</td><td>20180416</td><td>20180416</td><td>1655564</td><td>9.002940646885508</td><td>1970156160</td><td>1.97 GB</td></tr>\n",
+       "<tr><td>9</td><td>GAMA-09</td><td>20180601</td><td>20180601</td><td>12937982</td><td>62.01393417284915</td><td>19911611520</td><td>19.91 GB</td></tr>\n",
+       "<tr><td>10</td><td>GAMA-12</td><td>20180218</td><td>20180218</td><td>12369415</td><td>62.70933280772107</td><td>14633066880</td><td>14.63 GB</td></tr>\n",
+       "<tr><td>11</td><td>GAMA-15</td><td>20180213</td><td>20180213</td><td>14232880</td><td>61.70114565980842</td><td>16595585280</td><td>16.6 GB</td></tr>\n",
+       "<tr><td>12</td><td>HDF-N</td><td>20180427</td><td>20180427</td><td>130679</td><td>0.6717832558166041</td><td>185996160</td><td>186 MB</td></tr>\n",
+       "<tr><td>13</td><td>Herschel-Stripe-82</td><td>20180307</td><td>20180307</td><td>50196455</td><td>363.22747930641884</td><td>127047306240</td><td>127.05 GB</td></tr>\n",
+       "<tr><td>14</td><td>Lockman-SWIRE</td><td>20180219</td><td>20180219</td><td>4366298</td><td>22.413863402949218</td><td>5195931840</td><td>5.2 GB</td></tr>\n",
+       "<tr><td>15</td><td>NGP</td><td>20180219</td><td>20180501</td><td>6759591</td><td>177.6981971077162</td><td>4954806720</td><td>4.95 GB</td></tr>\n",
+       "<tr><td>16</td><td>SA13</td><td>20180501</td><td>20180501</td><td>9799</td><td>0.27416379328431184</td><td>2721600</td><td>2.72 MB</td></tr>\n",
+       "<tr><td>17</td><td>SGP</td><td>20180221</td><td>20180221</td><td>29790690</td><td>294.5684540900642</td><td>45192530880</td><td>45.19 GB</td></tr>\n",
+       "<tr><td>18</td><td>SPIRE-NEP</td><td>20180220</td><td>20180220</td><td>2674</td><td>0.1280660469377391</td><td>1203840</td><td>1.2 MB</td></tr>\n",
+       "<tr><td>19</td><td>SSDF</td><td>20180221</td><td>20180221</td><td>12661903</td><td>111.11624949343539</td><td>8078319360</td><td>8.08 GB</td></tr>\n",
+       "<tr><td>20</td><td>xFLS</td><td>20180501</td><td>20180501</td><td>977148</td><td>7.44043242140754</td><td>1050474240</td><td>1.05 GB</td></tr>\n",
+       "<tr><td>21</td><td>XMM-13hr</td><td>20180501</td><td>20180501</td><td>38629</td><td>0.7570240166583633</td><td>10676160</td><td>10.68 MB</td></tr>\n",
+       "<tr><td>22</td><td>XMM-LSS</td><td>20180504</td><td>20180504</td><td>8705837</td><td>21.75457939331374</td><td>28241838720</td><td>28.24 GB</td></tr>\n",
        "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
        ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
        "display: inline-block; margin-right: 1em; }\n",
@@ -109,14 +118,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table139909371936384-314606').dataTable()\");\n",
+       "    console.log(\"$('#table140000904617320-525715').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table139909371936384-314606').dataTable({\n",
+       "    $('#table140000904617320-525715').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -150,27 +159,27 @@
      "text": [
       "./dmu32_AKARI-NEP/data/AKARI-NEP_20180215_cigale.fits\n",
       "./dmu32_AKARI-SEP/data/AKARI-SEP_20180221_cigale.fits\n",
-      "./dmu32_Bootes/data/Bootes_20180307_cigale.fits\n",
-      "./dmu32_CDFS-SWIRE/data/CDFS-SWIRE_20180221.fits\n",
-      "./dmu32_COSMOS/data/COSMOS_20180313_cigale.fits\n",
-      "./dmu32_EGS/data/EGS_20180217_cigale.fits\n",
+      "./dmu32_Bootes/data/Bootes_20180520_cigale.fits\n",
+      "./dmu32_CDFS-SWIRE/data/CDFS-SWIRE_20180613.fits\n",
+      "./dmu32_COSMOS/data/COSMOS_20180619.fits\n",
+      "./dmu32_EGS/data/EGS_20180501_cigale.fits\n",
       "./dmu32_ELAIS-N1/data/ELAIS-N1_20171016.fits\n",
       "./dmu32_ELAIS-N2/data/ELAIS-N2_20180218_cigale.fits\n",
-      "./dmu32_ELAIS-S1/data/ELAIS-S1_20180221_cigale.fits\n",
-      "./dmu32_GAMA-09/data/GAMA-09_20171206_cigale.fits\n",
-      "./dmu32_GAMA-12/data/GAMA-12_20180218_cigale.fits\n",
-      "./dmu32_GAMA-15/data/GAMA-15_20180213_cigale.fits\n",
-      "./dmu32_HDF-N/data/HDF-N_20180219_cigale.fits\n",
+      "./dmu32_ELAIS-S1/data/ELAIS-S1_20180416.fits\n",
+      "./dmu32_GAMA-09/data/GAMA-09_20180601.fits\n",
+      "./dmu32_GAMA-12/data/GAMA-12_20180218.fits\n",
+      "./dmu32_GAMA-15/data/GAMA-15_20180213.fits\n",
+      "./dmu32_HDF-N/data/HDF-N_20180427_cigale.fits\n",
       "./dmu32_Herschel-Stripe-82/data/Herschel-Stripe-82_20180307_cigale.fits\n",
       "./dmu32_Lockman-SWIRE/data/Lockman-SWIRE_20180219.fits\n",
       "./dmu32_NGP/data/NGP_20180219_cigale.fits\n",
-      "./dmu32_SA13/data/SA13_20180219_cigale.fits\n",
+      "./dmu32_SA13/data/SA13_20180501_cigale.fits\n",
       "./dmu32_SGP/data/SGP_20180221_cigale.fits\n",
       "./dmu32_SPIRE-NEP/data/SPIRE-NEP_20180220_cigale.fits\n",
       "./dmu32_SSDF/data/SSDF_20180221_cigale.fits\n",
-      "./dmu32_xFLS/data/xFLS_20180221_cigale.fits\n",
-      "./dmu32_XMM-13hr/data/XMM-13hr_20180221_cigale.fits\n",
-      "./dmu32_XMM-LSS/data/XMM-LSS_20180221_cigale.fits\n"
+      "./dmu32_xFLS/data/xFLS_20180501_cigale.fits\n",
+      "./dmu32_XMM-13hr/data/XMM-13hr_20180501_cigale.fits\n",
+      "./dmu32_XMM-LSS/data/XMM-LSS_20180504_cigale.fits\n"
      ]
     }
    ],
@@ -219,11 +228,41 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../dmu1/dmu1_ml_AKARI-NEP/data/depths_akari-nep_20180215.fits\n",
+      "../dmu1/dmu1_ml_AKARI-SEP/data/depths_akari-sep_20180221.fits\n",
+      "../dmu1/dmu1_ml_Bootes/data/depths_bootes_20180520.fits\n",
+      "../dmu1/dmu1_ml_CDFS-SWIRE/data/depths_cdfs-swire_20180613.fits\n",
+      "../dmu1/dmu1_ml_COSMOS/data/depths_cosmos_20180619.fits\n",
+      "../dmu1/dmu1_ml_EGS/data/depths_egs_20180501.fits\n",
+      "../dmu1/dmu1_ml_ELAIS-N1/data/depths_elais-n1_20171016.fits\n",
+      "../dmu1/dmu1_ml_ELAIS-N2/data/depths_elais-n2_20180218.fits\n",
+      "../dmu1/dmu1_ml_ELAIS-S1/data/depths_elais-s1_20180416.fits\n",
+      "../dmu1/dmu1_ml_GAMA-09/data/depths_gama-09_20180601.fits\n",
+      "../dmu1/dmu1_ml_GAMA-12/data/depths_gama-12_20180218.fits\n",
+      "../dmu1/dmu1_ml_GAMA-15/data/depths_gama-15_20180213.fits\n",
+      "../dmu1/dmu1_ml_HDF-N/data/depths_hdf-n_20180427.fits\n",
+      "../dmu1/dmu1_ml_Herschel-Stripe-82/data/depths_herschel-stripe-82_20180307.fits\n",
+      "../dmu1/dmu1_ml_Lockman-SWIRE/data/depths_lockman-swire_20180219.fits\n",
+      "../dmu1/dmu1_ml_NGP/data/depths_ngp_20180219.fits\n",
+      "../dmu1/dmu1_ml_SA13/data/depths_sa13_20180501.fits\n",
+      "../dmu1/dmu1_ml_SGP/data/depths_sgp_20180221.fits\n",
+      "../dmu1/dmu1_ml_SPIRE-NEP/data/depths_spire-nep_20180220.fits\n",
+      "../dmu1/dmu1_ml_SSDF/data/depths_ssdf_20180221.fits\n",
+      "../dmu1/dmu1_ml_xFLS/data/depths_xfls_20180501.fits\n",
+      "../dmu1/dmu1_ml_XMM-13hr/data/depths_xmm-13hr_20180501.fits\n",
+      "../dmu1/dmu1_ml_XMM-LSS/data/depths_xmm-lss_20180504.fits\n"
+     ]
+    }
+   ],
    "source": [
     "depths_to_vo = open('depths_to_vo.sh', 'w+')\n",
     "for field in dr1:\n",
-    "    final_depth_product = './dmu1_ml_{}/data/depths_{}_{}.fits'.format(field[0], field[0].lower(), field[1])\n",
+    "    final_depth_product = '../dmu1/dmu1_ml_{}/data/depths_{}_{}.fits'.format(field[0], field[0].lower(), field[1])\n",
     "    \n",
     "\n",
     "    if os.path.exists(final_depth_product):\n",
@@ -232,7 +271,7 @@
     "        #Test with Cigale input files\n",
     "        depths_to_vo.write(stilts_command.format(in_file=final_depth_product, \n",
     "                                               GAVO_FOLDER=GAVO_FOLDER, \n",
-    "                                               out_file='depths/main/{}_{}.csv \\n'.format(field[0], \n",
+    "                                               out_file='depth/{}_{}.csv \\n'.format(field[0], \n",
     "                                                                                                field[1])))\n",
     "\n",
     "        \n",
